chore: add readme - fix: bugs

--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ REDIS_PORT=6379
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USER=
-MAIL_PASS=
+MAIL_USER=8b4cbefab48e6f
+MAIL_PASS=54e3f0266b8a41
 
 # Sentry
-SENTRY_DSN=
+SENTRY_DSN=https://dba942193169404bb2c50354253b69ac@sentry.io/1544123
